@@ -4,6 +4,8 @@
  */
 class SearchNearMatchResultSet extends SearchResultSet {
 	private $fetched = false;
+	/** @var Title|null Title if matched, else null */
+	private $result;
 
 	/**
 	 * @param Title|null $match Title if matched, else null
@@ -16,15 +18,11 @@ class SearchNearMatchResultSet extends SearchResultSet {
 		return $this->result ? 1 : 0;
 	}
 
-	public function next() {
-		if ( $this->fetched || !$this->result ) {
-			return false;
+	public function extractResults() {
+		if ( $this->result ) {
+			return [ SearchResult::newFromTitle( $this->result, $this ) ];
+		} else {
+			return [];
 		}
-		$this->fetched = true;
-		return SearchResult::newFromTitle( $this->result, $this );
-	}
-
-	public function rewind() {
-		$this->fetched = false;
 	}
 }
