@@ -24,7 +24,7 @@
 /**
  * @ingroup Search
  */
-class SearchResultSet {
+class SearchResultSet implements IteratorAggregate {
 
 	/**
 	 * Types of interwiki results
@@ -64,6 +64,9 @@ class SearchResultSet {
 	 * @var array[]
 	 */
 	protected $extraData = [];
+
+	/** @var ArrayIterator|null Iterator supporting BC iteration methods */
+	private $bcIterator;
 
 	public function __construct( $containedSyntax = false ) {
 		$this->containedSyntax = $containedSyntax;
@@ -173,18 +176,38 @@ class SearchResultSet {
 	 * Fetches next search result, or false.
 	 * STUB
 	 * FIXME: refactor as iterator, so we could use nicer interfaces.
-	 * @deprecated since 1.32; Use self::extractResults()
+	 * @deprecated since 1.32; Use self::extractResults() or foreach
 	 * @return SearchResult|false
 	 */
-	function next() {
-		return false;
+	public function next() {
+		wfDeprecated( __METHOD__, '1.32' );
+		$it = $this->bcIterator();
+		$searchResult = $it->current();
+		$it->next();
+		return $searchResult === null ? false : $searchResult;
 	}
 
 	/**
 	 * Rewind result set back to beginning
-	 * @deprecated since 1.32; Use self::extractResults()
+	 * @deprecated since 1.32; Use self::extractResults() or foreach
 	 */
-	function rewind() {
+	public function rewind() {
+		wfDeprecated( __METHOD__, '1.32' );
+		$this->bcIterator()->rewind();
+	}
+
+	private function bcIterator() {
+		if ( $this->bcIterator === null ) {
+			$this->bcIterator = 'RECURSION';
+			$this->bcIterator = new ArrayIterator( $this->extractResults() );
+		} elseif ( $this->bcIterator === 'RECURSION' ) {
+			// Either next/rewind or extractResults must be implemented.
+			// This class was potentially instantiated directly. It should
+			// be abstract but thats a breaking change...
+			wfDeprecated( '???', '1.32' );
+			return new ArrayIterator( [] );
+		}
+		return $this->bcIterator;
 	}
 
 	/**
@@ -277,5 +300,9 @@ class SearchResultSet {
 	 */
 	public function getOffset() {
 		return null;
+	}
+
+	final public function getIterator() {
+		return new ArrayIterator( $this->extractResults() );
 	}
 }
