@@ -95,6 +95,9 @@ because of Phabricator reports.
 * Overriding SearchEngine::{searchText,searchTitle,searchArchiveTitle}
   in extending classes is deprecated.  Extend related doSearch* methods
   instead.
+* SearchResultSet::{next,rewind} have been deprecated. Calling code should
+  use foreach on the resultset, or the extractResults method. Extending code
+  should override extractResults.
 
 === Other changes in 1.32 ===
 * …
